--- a/stl.vcxproj.filters
+++ b/stl.vcxproj.filters
@@ -18,5 +18,13 @@
     <ClCompile Include="stl.cpp">
       <Filter>源文件</Filter>
     </ClCompile>
+    <ClCompile Include="spiralOrder.cpp">
+      <Filter>源文件</Filter>
+    </ClCompile>
+  </ItemGroup>
+  <ItemGroup>
+    <ClInclude Include="spiralOrder.h">
+      <Filter>头文件</Filter>
+    </ClInclude>
   </ItemGroup>
 </Project>
