--- a/模拟演讲比赛.vcxproj.filters
+++ b/模拟演讲比赛.vcxproj.filters
@@ -18,5 +18,19 @@
     <ClCompile Include="SpeechManager.cpp">
       <Filter>源文件</Filter>
     </ClCompile>
+    <ClCompile Include="SpeechContest.cpp">
+      <Filter>源文件</Filter>
+    </ClCompile>
+    <ClCompile Include="Speaker.cpp">
+      <Filter>源文件</Filter>
+    </ClCompile>
+  </ItemGroup>
+  <ItemGroup>
+    <ClInclude Include="SpeechManager.h">
+      <Filter>头文件</Filter>
+    </ClInclude>
+    <ClInclude Include="Speaker.h">
+      <Filter>头文件</Filter>
+    </ClInclude>
   </ItemGroup>
 </Project>
